Edits to comments, code and captions

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -73,6 +73,16 @@
         },
         {
             "cell_type": "markdown",
+            "id": "a1f1ca1a",
+            "metadata": {},
+            "source": [
+                "Really... funny (if you want to call it that) part about these visualizations is that it took me an extra three days to scrape La Liga data. Why do I bring that up? THERE IS NO LA LIGA PLAYER OR TEAM IN THE TOP 10 OF THE CATEGORIES I SELECTED. However, how lucky am I to have been given a challenege to go and find more data! \n",
+                "\n",
+                "It gave me more practice scraping and reading documentation, so who is the real winner (probably not me)."
+            ]
+        },
+        {
+            "cell_type": "markdown",
             "metadata": {},
             "source": [
                 "### Top 10 Point total Finishers by League (2015-2024)"
@@ -88,7 +98,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -268,7 +278,7 @@
             "source": [
                 "## In the future:\n",
                 "\n",
-                "I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. I need to find a website that would actually show each club's wage bill and then I would have to scrape that to be able to attempt and compare contract value to stats. I would need to create some sort of model to predict future player performance based on previous stats and what league they are playing in. Since I have already figured out how to scrape individual player data, I just need to connect individual player data to their current and previous contracts to get my first steps."
+                "I would love to scrape contract data for players (I assume that will be a little more difficult to get entire clubs wage bills [youth players and senior teams]). I will probably need a lot more time on my hands and a little bit more practice with scraping. I need to find a website that would actually show each club's wage bill and then I would have to scrape that to be able to attempt and compare contract value to stats. The current issue with that is that there is not one specific website that will have all this data, and I would need to scrape through multiple websites if I want to gather contract information. When I complete that data collection, I want to create a model to predict future player contract value based on previous stats and what league they are playing in. I just need to connect individual player data to their current and previous contracts to get my first steps a model is much further down the line. "
             ]
         }
     ],
