Edit to assist with finding files

--- a/notebooks/Unstructured_Final_Vizs.ipynb
+++ b/notebooks/Unstructured_Final_Vizs.ipynb
@@ -19,6 +19,14 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "id": "430cba52",
+            "metadata": {},
+            "source": [
+                "If you run the scraper and then run this, just replace eganb with your associated profile name."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": 15,
             "metadata": {},
